fixing scrollbars

--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,8 @@ body {
   width:100%;
   height:100%;
   background-attachment:fixed;
+  margin:0;
+  padding:0;
 }
 h2 {
   font-size:50px;
